@@ -25,7 +25,6 @@
 
 package jdk.javadoc.internal.doclets.toolkit.taglets;
 
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -35,7 +34,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ExecutableElement;
@@ -55,15 +53,9 @@ import jdk.javadoc.internal.doclets.toolkit.util.DocFinder.Input;
 import jdk.javadoc.internal.doclets.toolkit.util.Utils;
 
 /**
- * A taglet that represents the @throws tag.
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
+ * A taglet that represents the {@code @throws} tag.
  */
-public class ThrowsTaglet extends BaseTaglet
-    implements InheritableTaglet {
+public class ThrowsTaglet extends BaseTaglet implements InheritableTaglet {
 
     public ThrowsTaglet() {
         super(DocTree.Kind.THROWS, false, EnumSet.of(Location.CONSTRUCTOR, Location.METHOD));
@@ -75,10 +67,10 @@ public class ThrowsTaglet extends BaseTaglet
         Element exception;
         CommentHelper ch = utils.getCommentHelper(input.element);
         if (input.tagId == null) {
-            exception = input.docTreeInfo.docTree instanceof ThrowsTree tt
+            exception = input.docTreeInfo.docTree() instanceof ThrowsTree tt
                     ? ch.getException(tt) : null;
             input.tagId = exception == null
-                    ? ch.getExceptionName(input.docTreeInfo.docTree).getSignature()
+                    ? ch.getExceptionName(input.docTreeInfo.docTree()).getSignature()
                     : utils.getFullyQualifiedName(exception);
         } else {
             exception = input.utils.findClass(input.element, input.tagId);
@@ -87,14 +79,14 @@ public class ThrowsTaglet extends BaseTaglet
         for (ThrowsTree tt : input.utils.getThrowsTrees(input.element)) {
             Element exc = ch.getException(tt);
             if (exc != null && (input.tagId.equals(utils.getSimpleName(exc)) ||
-                 (input.tagId.equals(utils.getFullyQualifiedName(exc))))) {
+                    (input.tagId.equals(utils.getFullyQualifiedName(exc))))) {
                 output.holder = input.element;
                 output.holderTag = tt;
                 output.inlineTags = ch.getBody(output.holderTag);
                 output.tagList.add(tt);
             } else if (exception != null && exc != null &&
                     utils.isTypeElement(exc) && utils.isTypeElement(exception) &&
-                    utils.isSubclassOf((TypeElement)exc, (TypeElement)exception)) {
+                    utils.isSubclassOf((TypeElement) exc, (TypeElement) exception)) {
                 output.tagList.add(tt);
             }
         }
@@ -104,15 +96,16 @@ public class ThrowsTaglet extends BaseTaglet
      * Add links for exceptions that are declared but not documented.
      */
     private Content linkToUndocumentedDeclaredExceptions(List<? extends TypeMirror> declaredExceptionTypes,
-            Set<String> alreadyDocumented, TagletWriter writer) {
+                                                         Set<String> alreadyDocumented,
+                                                         TagletWriter writer) {
         Utils utils = writer.configuration().utils;
         Content result = writer.getOutputInstance();
         //Add links to the exceptions declared but not documented.
         for (TypeMirror declaredExceptionType : declaredExceptionTypes) {
             TypeElement te = utils.asTypeElement(declaredExceptionType);
             if (te != null &&
-                !alreadyDocumented.contains(declaredExceptionType.toString()) &&
-                !alreadyDocumented.contains(utils.getFullyQualifiedName(te, false))) {
+                    !alreadyDocumented.contains(declaredExceptionType.toString()) &&
+                    !alreadyDocumented.contains(utils.getFullyQualifiedName(te, false))) {
                 if (alreadyDocumented.isEmpty()) {
                     result.add(writer.getThrowsHeader());
                 }
@@ -128,11 +121,13 @@ public class ThrowsTaglet extends BaseTaglet
      * documented.
      */
     private Content inheritThrowsDocumentation(Element holder,
-            List<? extends TypeMirror> declaredExceptionTypes, Set<String> alreadyDocumented,
-            Map<String, TypeMirror> typeSubstitutions, TagletWriter writer) {
+                                               List<? extends TypeMirror> declaredExceptionTypes,
+                                               Set<String> alreadyDocumented,
+                                               Map<String, TypeMirror> typeSubstitutions,
+                                               TagletWriter writer) {
         Utils utils = writer.configuration().utils;
         Content result = writer.getOutputInstance();
-        if (utils.isExecutableElement(holder)) {
+        if (utils.isMethod(holder)) {
             Map<List<? extends ThrowsTree>, ExecutableElement> declaredExceptionTags = new LinkedHashMap<>();
             for (TypeMirror declaredExceptionType : declaredExceptionTypes) {
                 Input input = new DocFinder.Input(utils, holder, this,
@@ -164,7 +159,7 @@ public class ThrowsTaglet extends BaseTaglet
         Utils utils = writer.configuration().utils;
         ExecutableElement execHolder = (ExecutableElement) holder;
         ExecutableType instantiatedType = utils.asInstantiatedMethodType(
-                writer.getCurrentPageElement(), (ExecutableElement)holder);
+                writer.getCurrentPageElement(), (ExecutableElement) holder);
         List<? extends TypeMirror> thrownTypes = instantiatedType.getThrownTypes();
         Map<String, TypeMirror> typeSubstitutions = getSubstitutedThrownTypes(
                 writer.configuration().utils.typeUtils,
@@ -193,8 +188,10 @@ public class ThrowsTaglet extends BaseTaglet
      * @return the generated content for the tags
      */
     protected Content throwsTagsOutput(Map<List<? extends ThrowsTree>, ExecutableElement> throwTags,
-                                       TagletWriter writer, Set<String> alreadyDocumented,
-                                       Map<String,TypeMirror> typeSubstitutions, boolean allowDuplicates) {
+                                       TagletWriter writer,
+                                       Set<String> alreadyDocumented,
+                                       Map<String, TypeMirror> typeSubstitutions,
+                                       boolean allowDuplicates) {
         Utils utils = writer.configuration().utils;
         Content result = writer.getOutputInstance();
         if (!throwTags.isEmpty()) {
@@ -206,9 +203,9 @@ public class ThrowsTaglet extends BaseTaglet
                     String excName = ch.getExceptionName(dt).toString();
                     TypeMirror substituteType = typeSubstitutions.get(excName);
                     if ((!allowDuplicates) &&
-                        (alreadyDocumented.contains(excName) ||
-                        (te != null && alreadyDocumented.contains(utils.getFullyQualifiedName(te, false)))) ||
-                        (substituteType != null && alreadyDocumented.contains(substituteType.toString()))) {
+                            (alreadyDocumented.contains(excName) ||
+                                    (te != null && alreadyDocumented.contains(utils.getFullyQualifiedName(te, false)))) ||
+                            (substituteType != null && alreadyDocumented.contains(substituteType.toString()))) {
                         continue;
                     }
                     if (alreadyDocumented.isEmpty()) {
@@ -251,6 +248,6 @@ public class ThrowsTaglet extends BaseTaglet
             }
             return map;
         }
-        return Collections.emptyMap();
+        return Map.of();
     }
 }
